--- a/PROJETO INDIVIDUAL/css/cadastroong.css
+++ b/PROJETO INDIVIDUAL/css/cadastroong.css
@@ -3,19 +3,21 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins';
 }
 
 main {
-    display: flex;
-    font-family: 'Poppins';
-    background-color: #F3C899;
+    width: 100%;
     height: 86vh;
-    flex-direction: column;
-    justify-content: space-evenly;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins';
+    background-color: #f3c899;
 }
 
 a {
-    transition: 10s ease;
     cursor: pointer;
     color: #FEA94E;
     text-decoration: none;
@@ -126,4 +128,47 @@ nav {
 
 .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
+}
+
+/* FORMULÁRIO CADASTRO */
+
+form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: #F4B97A;
+    border-radius: 10px;
+    padding: 10px 50px 10px 50px;
+    width: min-content;
+    align-items: center;
+    justify-content: center;
+    color: #787833;
+}
+
+.titulo {
+    display: flex;
+    font-size: 1.8rem;
+    margin-bottom: 10%;
+    justify-content: center;
+}
+
+.input {
+    min-width: 280px;
+    border-radius: 5px;
+    border: 2px #FEA94E solid;
+    padding: 5px;
+    margin: 0px 0px 12px -5px;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    min-width: 200px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #787833;
+    border: 2px #FEA94E solid;
+    padding: 5px;
+    margin: 0px 0px 12px -5px;
 }
