Subindo site geral

--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/Interface de Usuário/css/uiong.css
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/Interface de Usuário/css/uiong.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&family=Poppins:ital,wght@1,500&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-main {
-    display: flex;
+html {
+    scroll-behavior: smooth;
+}
+
+main{
     font-family: 'Poppins';
-    background-color: rgb(224, 224, 224);
-    height: 86vh;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
 
 a {
@@ -25,6 +24,8 @@ a:hover {
     opacity: 0.7;
 }
 
+/*Navbar*/
+
 .Logo {
     font-size: 24px;
     text-transform: uppercase;
@@ -32,8 +33,6 @@ a:hover {
     margin: 9px;
     height: 80%;
 }
-
-/* NAVBAR */
 
 nav {
     display: flex;
@@ -128,30 +127,49 @@ nav {
     transform: rotate(45deg) translate(-5px, -7px);
 }
 
-/* MAIN VALIDAÇÃO */
+/* FORMULÁRIO DE CADASTRO DE GATO */
 
-h1 {
+.form {
     display: flex;
+    flex-direction: column;
+    border: 1px #787833 solid;
+    padding: 10px 50px 10px 50px;
+    background-color: #F4B97A;
+    color: #787833;
+}
+
+.form-inputs {
+    display: flex;
+    gap: 30px;
+}
+
+.titulo {
+    display: flex;
+    font-size: 1.8rem;
+    margin-bottom: 10%;
     justify-content: center;
 }
 
-.caixa-grande {
+.input {
+    min-width: 280px;
+    border-radius: 5px;
+    border: 2px #FEA94E solid;
+    padding: 5px;
+    margin: 0px 0px 12px -5px;
+}
+
+button {
     display: flex;
     justify-content: center;
-    justify-content: space-evenly;
-    
+    min-width: 200px;
+    border-radius: 5px;
+    background-color: #787833;
+    border: 2px #FEA94E solid;
+    padding: 10px 50px 10px 50px;
 }
 
-.cadastro-link {
-    color:black;
-    border: black;
-}
-
-.cadastro-container {
+.button {
     display: flex;
-    align-items: center;
-    height: 25vh;
-    width: 25vh;
-    border: black solid 1px;
-    background-color: #AEB37F;
+    justify-content: center;
+    margin: 18px 0px 12px -5px;
 }
