--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/css/Login Usuario.css
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/css/Login Usuario.css
@@ -13,6 +13,7 @@ main {
     justify-content: center;
     align-items: center;
     font-family: 'Poppins';
+    color: #693804;
     background-color: rgb(224, 224, 224);
 }
 
