--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/css/cadastroong.css
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/css/cadastroong.css
@@ -13,7 +13,7 @@ main {
     justify-content: center;
     align-items: center;
     font-family: 'Poppins';
-    background-color: #F3C899;
+    background-color: rgb(224, 224, 224);
 }
 
 a {
