--- a/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/css/Login Usuario.css
+++ b/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/css/Login Usuario.css
@@ -3,7 +3,6 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins';
 }
 
 main {
@@ -13,8 +12,8 @@ main {
     justify-content: center;
     align-items: center;
     font-family: 'Poppins';
-    color: #693804;
-    background-color: rgb(224, 224, 224);
+    color: #787833;
+    background-color: #FBEFE3;
 }
 
 a {
@@ -78,7 +77,7 @@ nav {
     flex-direction: column;
     border: 1px #787833 solid;
     padding: 10px 50px 10px 50px;
-    background-color: #F4B97A;
+    background-color: #f0eeea;
     color: #787833;
 }
 
@@ -97,7 +96,7 @@ nav {
 .input {
     min-width: 280px;
     border-radius: 5px;
-    border: 2px #FEA94E solid;
+    border: 2px #787833 solid;
     padding: 5px;
     margin: 0px 0px 12px -5px;
 }
@@ -108,7 +107,7 @@ button {
     min-width: 200px;
     border-radius: 5px;
     background-color: #787833;
-    border: 2px #FEA94E solid;
+    border: 2px rgb(138, 138, 138) solid;
     padding: 10px 50px 10px 50px;
 }
 
